[f] 466 - fix page title vertical align
[#108414466] https://www.pivotaltracker.com/story/show/108414466

--- a/common/static/sass/style.sass
+++ b/common/static/sass/style.sass
@@ -345,7 +345,7 @@ footer
 .site-title
   font-size: 21px
   font-family: $font_1, $font_4
-  margin: 0 0 0 10px
+  margin: 8px 0 0 10px
   width: 50%
   input
     border: none
